syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/duration.proto";

option csharp_namespace = "HomeSpeaker.Server.gRPC";

package homespeaker;

// The greeting service definition.
service Greeter2 {
  // Sends a greeting
  rpc SayHello (HelloRequest2) returns (HelloReply2);
}

// The request message containing the user's name.
message HelloRequest2 {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply2 {
  string message = 1;
}

service HomeSpeaker {
	rpc GetSongs(GetSongsRequest) returns (stream GetSongsReply);
	rpc PlaySong(PlaySongRequest) returns (PlaySongReply);
	rpc EnqueueSong(PlaySongRequest) returns (PlaySongReply);
	rpc ResetLibrary(google.protobuf.Empty) returns (google.protobuf.Empty);
	rpc GetPlayerStatus(GetStatusRequest) returns (GetStatusReply);
	rpc GetPlayQueue(GetSongsRequest) returns (stream GetSongsReply);
}

message GetStatusRequest{}
message GetStatusReply {
	google.protobuf.Duration Elapsed=1;
	google.protobuf.Duration Remaining=2;
	bool StilPlaying=3;
	double PercentComplete=4;
}

message GetSongsRequest { }
message GetSongsReply {
  repeated SongMessage Songs = 1;
}

message PlaySongRequest{
	int32 SongId=1;
}
message PlaySongReply{
	bool Ok=1;
}

message SongMessage {
  int32 SongId=1;
  string Name=2;
  string Path=3;
  string Album=4;
  string Artist=5;
}